--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "socket.io": "^4.7.1"
+    "firebase-admin": "^11.9.0",
+    "socket.io": "^4.7.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
