--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest tests/users.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
+    "jest": "^29.6.1",
     "socket.io": "^4.7.1",
+    "supertest": "^6.3.3",
     "ws": "^8.13.0"
   },
   "devDependencies": {
